<resources>
    <string name="app_name">神灯</string>

    <string name="msg_network_error">当前网络不可用，请检查网络设置</string>
    <string name="msg_network_loading">加载中…</string>
    <string name="msg_network_nothing">暂无数据</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pull_up_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="about_us_string_1">联系我们</string>
    <string name="about_us_string_2">官方网站</string>
    <string name="about_us_string_3">客服热线</string>
    <string name="about_us_string_4">官方QQ群</string>
    <string name="about_us_string_5">luoyingxing@126.com</string>
    <string name="about_us_string_6">www.shengdeng.com</string>
    <string name="about_us_string_7">15820154544</string>
    <string name="about_us_string_8">595831581</string>
    <string name="about_us_string_9">神灯&#160;&#160;版权所有</string>
    <string name="about_us_string_10">Copyrightⓒluoyingxing</string>
    <string name="about_us_string_11">All Rights Reserved</string>
    <string name="about_us_string_12">版本号&#160;V</string>

    <string name="personal_help_title">“神灯”是一款集热点、精选、内涵、娱乐、健康和工具于一体的APP。[PS]您可将您的需求或建议发送至开发者邮箱：luoyingxing@126.com，我们会根据您的宝贵建议进行完善。</string>
    <string name="personal_help_news">[热点]可以查看到当前热点的新闻时事。</string>
    <string name="personal_help_recommend">[精选]可以浏览一些精选的视频或段子，愉悦你的心情。</string>
    <string name="personal_help_focus">[内涵]这里有无尽的内涵段子，打开你的脑洞。</string>
    <string name="personal_help_recreation">[娱乐]这里有你喜欢的文本笑话和图文笑话，让你爆笑一刻。</string>
    <string name="personal_help_health">[健康]在这里，你可以了解到各种健康知识。</string>
    <string name="personal_help_personal">[个人]这里有个私人工具箱，你可以通过反馈或者联系开发者进行增加您想要的工具模块，满足您的需求。</string>

    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment" translatable="false">评论</string>
    <string name="umeng_socialize_comment_detail" translatable="false">评论详情</string>
    <string name="umeng_socialize_back" translatable="false">返回</string>
    <string name="umeng_socialize_near_At" translatable="false">最近\@的好友</string>
    <string name="umeng_socialize_friends" translatable="false">关注的好友</string>
    <string name="umeng_socialize_send" translatable="false">发布</string>
    <string name="umeng_socialize_tip_blacklist" translatable="false">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed" translatable="false">登录失败&#8230;</string>
    <string name="umeng_socialize_msg_sec" translatable="false">秒前</string>
    <string name="umeng_socialize_msg_min" translatable="false">分钟前</string>
    <string name="umeng_socialize_msg_hor" translatable="false">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide" translatable="false">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform" translatable="false">登录帐号</string>

    <dimen name="alphabet_size">12dip</dimen>
    <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
    <dimen name="umeng_socialize_pad_window_width">580dip</dimen>

    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台，
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <!-- 平台名称 -->
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="umeng_socialize_text_yixin_key">易信</string>
    <string name="umeng_socialize_text_yixincircle_key">易信朋友圈</string>

    <string name="umeng_socialize_text_laiwangdynamic_key">来往动态</string>
    <string name="umeng_socialize_text_evernote_key">印象笔记</string>
    <string name="umeng_socialize_text_ydnote_key">有道云笔记</string>
    <string name="umeng_socialize_text_facebook_key">facebook</string>
    <string name="umeng_socialize_text_twitter_key">twitter</string>
    <string name="umeng_socialize_text_instagram_key">instagram</string>
    <string name="umeng_socialize_text_pinterest_key">pinterest</string>
    <string name="umeng_socialize_text_pocket_key">pocket</string>
    <string name="umeng_socialize_text_linkedin_key">Linkedin</string>
    <string name="umeng_socialize_text_foursquare_key">Foursquare</string>
    <string name="umeng_socialize_text_whatsapp_key">WhatsApp</string>
    <string name="umeng_socialize_text_line_key">LINE</string>
    <string name="umeng_socialize_text_flickr_key">Flickr</string>
    <string name="umeng_socialize_text_tumblr_key">Tumblr</string>
    <string name="umeng_socialize_text_alipay_key">支付宝</string>
    <string name="umeng_socialize_text_kakao_key">Kakao Talk</string>
    <string name="umeng_socialize_text_googleplus_key">GooglePlus</string>
    <string name="umeng_socialize_text_more_key">更多</string>

</resources>